--- a/public/partials/styles.html
+++ b/public/partials/styles.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h4>{{ message }}</h4>
+  <h4 class="text-center">{{ message }}</h4>
   <h4>Styles</h4>
   <p>uisque tristique tellus vehicula dui sollicitudin, vitae sagittis lorem blandit. Vivamus non lorem nec ex iaculis lobortis non in nulla. In ut felis at lacus vehicula mollis. Aliquam id augue congue justo facilisis finibus. Phasellus mattis nulla a ex bibendum posuere. Curabitur hendrerit in nulla et facilisis. Phasellus in condimentum elit. Morbi diam turpis, laoreet at euismod et, ornare scelerisque dolor. Cras vitae vestibulum purus, ut vulputate nulla. Duis a ante molestie ligula vehicula convallis in non justo. Pellentesque viverra ligula sit amet lectus faucibus, sed aliquet nibh aliquet. </p>
   <p>n hac habitasse platea dictumst. Donec ut ultrices leo. Proin in ligula ut mauris fermentum ornare sed non felis. Nulla pulvinar mi lectus, et feugiat ligula dictum ut. Integer velit purus, fermentum in accumsan sit amet, gravida euismod felis. Vestibulum pellentesque tristique est dapibus eleifend. Sed bibendum turpis nec enim consequat aliquam.</p>
